--- a/index.html
+++ b/index.html
@@ -599,13 +599,9 @@ charset=utf-8">
           } function sopen() {
                var bo = 0;
                var bp = -1, bq = -1;
-               for (var d = 0;
-                    d < X;
-                    d++) {
+               for (var d = 0; d < X; d++) {
                     var br = 0;
-                    for (var m = 0;
-                         m < Y;
-                         m++) {
+                    for (var m = 0; m < Y; m++) {
                          if (d31[m][d][2] == 0 && d31[m][d][1] == 0) { br++ } else {
                               if (br > bo) {
                                    bo = br;
@@ -684,7 +680,6 @@ charset=utf-8">
                _123(localStorage.getItem("ch7"));
                $("uid").innerHTML = lid();
                $("ver").innerHTML = VER;
-               setTimeout(ad, 1200)
           } function lid() {
                var bg = localStorage.getItem("uid");
                if (bg != null) { if (isNaN(bg)) { bg = null } };
@@ -757,9 +752,7 @@ charset=utf-8">
                var rv = localStorage.getItem(bm);
                if (rv == null) { rv = 0 };
                var bn = document.getElementsByName(bm);
-               for (i = 0;
-                    i < bn.length;
-                    i++) { if (bn[i].value == rv) { bn[i].checked = true } };
+               for (i = 0; i < bn.length; i++) { if (bn[i].value == rv) { bn[i].checked = true } };
                return rv
           } function ssave(bm, rv) {
                if (rv == 0) {
@@ -863,17 +856,12 @@ charset=utf-8">
      <base target=_top>
 </head>
 
-<body bgcolor="#f7f7f0" style="margin:0;
-" onload="ifnight();
-start();
-">
+<body bgcolor="#f7f7f0" style="margin:0;" onload="ifnight();start();">
      <center>
-          <div style="margin-top:0.8rem;
-">
+          <div style="margin-top:0.8rem;">
                <b>扫雷游戏</b>
           </div>
-          <div style="margin-top:0.8rem;
-">
+          <div style="margin-top:0.8rem;">
                <a href="javascript:_123(1)">基础</a>
                &nbsp;
 
@@ -888,16 +876,13 @@ start();
 
                <a href="javascript:_123(5)">自定义</a>
           </div>
-          <div id=custom style="display:none;
-margin-top:5">
+          <div id=custom style="display:none;margin-top:5">
                横<input id=hm type=number value=40>
                竖<input id=vm type=number value=24>
                雷<input id=mm type=number value=199>
                <input type=button onclick="udf()" value="确定">
           </div>
-          <table style="margin-top:0.8rem;
-border-radius:6px;
-background:#cccccc">
+          <table style="margin-top:0.8rem;border-radius:6px;background:#cccccc">
                <tr>
                     <td style="padding:9px;
 ">
@@ -907,15 +892,11 @@ background:#cccccc">
                                    <td align=center onmouseup="_45()" style="padding:0 8 0 8"><img id="face">
                                    <td width=50% align=right><canvas id="es" height=23 width=39></canvas></td>
                          </table>
-                         <canvas id="paf" class="pad" style="margin-top:6px;
-" width=0 height=0></canvas>
+                         <canvas id="paf" class="pad" style="margin-top:6px;" width=0 height=0></canvas>
                <tr>
                     <td align=right>
           </table>
-          <div style="width:90%;
-text-align:left;
-margin-top:3rem;
-">
+          <div style="width:90%;text-align:left;margin-top:3rem;">
                <span style="vertical-align:middle">自动标雷</span><input type=checkbox checked id=af onclick="saf()">
                <span style="float:right">
                     夜间<input type="checkbox" id="bcolor" onclick="bcolor()"></span>
@@ -925,23 +906,16 @@ margin-top:3rem;
                <br><br>
                <b>电脑：</b>鼠标右键点击原始方块，以小旗标记为雷，再点去除标记。标记的雷数和数字匹配时，点击数字（左右键均可）翻开周围的安全区域。鼠标左键点击无标记方块则直接打开。
                <a id=setm href="javascript:mouse2()">设置</a>
-               <div id="_mouse" style="border:solid 1px;
-display:none;
-background-color:silver;
-padding:0.5rem;
-">
+               <div id="_mouse" style="border:solid 1px;display:none;background-color:silver;padding:0.5rem;">
                     鼠标起效时间点
                     <br>
                     <br>
                     <i>左键</i>
                     <br>
                     <br>
-                    <input type=radio name="mp1" value="0" onclick="ssave('mp1',0);
-">按下时
-                    <input type=radio name="mp1" value="1" onclick="ssave('mp1',1);
-">弹起时
-                    <!--input type=radio name="mp1" value="2" onclick="ssave('mp1',2);
-">两次
+                    <input type=radio name="mp1" value="0" onclick="ssave('mp1',0);">按下时
+                    <input type=radio name="mp1" value="1" onclick="ssave('mp1',1);">弹起时
+                    <!--input type=radio name="mp1" value="2" onclick="ssave('mp1',2);">两次
 <br-->
                     <br>
                     <br>
@@ -949,12 +923,9 @@ padding:0.5rem;
                     <i>右键</i>
                     <br>
                     <br>
-                    <input type=radio name="mp2" value="0" onclick="ssave('mp2',0);
-">按下时
-                    <input type=radio name="mp2" value="1" onclick="ssave('mp2',1);
-">弹起时
-                    <!--input type=radio name="mp2" value="2" onclick="ssave('mp2',2);
-">两次
+                    <input type=radio name="mp2" value="0" onclick="ssave('mp2',0);">按下时
+                    <input type=radio name="mp2" value="1" onclick="ssave('mp2',1);">弹起时
+                    <!--input type=radio name="mp2" value="2" onclick="ssave('mp2',2);">两次
 <br>
 <br>
 <br>
@@ -967,31 +938,21 @@ padding:0.5rem;
                <br><br>
                <b>手机或平板：</b>在触屏上点击方块即标记为雷，再点去除标记。标记的雷数和数字匹配时，点击数字翻开周围的安全区域。长按方块直接打开。（可设置为点击直接打开；或点击三次打开）
                <a id=sett href="javascript:touch2()">设置</a>
-               <div id="_touch" style="border:solid 1px;
-display:none;
-background-color:silver;
-padding:0.5rem;
-">
+               <div id="_touch" style="border:solid 1px;display:none;background-color:silver;padding:0.5rem;">
                     <i>触击效果</i>
                     <br>
                     <br>
-                    <input type=radio name="tpn" value="0" checked onclick="ssave('tpn',0);
-smore(0);
-">标记
-                    <input type=radio name="tpn" value="1" onclick="ssave('tpn',1);
-smore(1);
-">直开
+                    <input type=radio name="tpn" value="0" checked onclick="ssave('tpn',0);smore(0);">标记
+                    <input type=radio name="tpn" value="1" onclick="ssave('tpn',1);smore(1);">直开
                     <br><br>
                     <br>
-                    <div id=thint style="display:none;
-">
+                    <div id=thint style="display:none;">
                          <i>直开模式下的标记方法</i>
                          <br>
                          <br>
                          长按
                     </div>
-                    <div id=topen style="display:none;
-">
+                    <div id=topen style="display:none;">
                          <i>标记模式下的打开方法</i>
                          <br>
                          <br>
@@ -1002,30 +963,9 @@ smore(1);
                     <br>
                </div>
                <br><br>
+               <div style="margin-top:2rem;">
+               <br>休闲益智小游戏——zgshuo制作
           </div>
-     </center>
-     <center>
-          <div id=ad style="margin-top:3rem;
-width:90%">
-               <script id="gg" async crossorigin="anonymous"></script>
-               <!-- saolei -->
-               <ins class="adsbygoogle" style="display:block" data-ad-client="ca-pub-2872916894005511"
-                    data-ad-slot="1319601002" data-ad-format="auto" data-full-width-responsive="true"></ins>
-               <script>
-                         (adsbygoogle = window.adsbygoogle || []).push({});
-
-               </script>
-          </div>
-          <script>
-               function ad() {
-                    $("gg").src = "https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2872916894005511";
-
-               }
-          </script>
-          <div style="margin-top:2rem;
-">
-               <br><br>
-               <br><br><br><br><br>
      </center>
 </body>
 
