--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@ charset=utf-8">
      <meta name="keywords" content="扫雷, saolei">
      <meta name="description" content="经典扫雷游戏，并略作改进。增加了满屏级别，自适应屏幕大小">
      <title>扫雷游戏*^▽^*</title>
-     <script src="scr.js"></script>
-     <link rel="stylesheet" href="cs.css">
+     <script src="script.js"></script>
+     <link rel="stylesheet" href="style.css">
      <base target=_top>
 </head>
 
