--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
 
 <head>
-     <meta http-equiv="Content-Type" content="text/html;
-charset=utf-8">
+     <meta http-equiv="Content-Type" content="text/html;charset=utf-8">
      <meta name="viewport" content="initial-scale=1">
      <meta name="keywords" content="扫雷, saolei">
      <meta name="description" content="经典扫雷游戏，并略作改进。增加了满屏级别，自适应屏幕大小">
@@ -10,6 +9,7 @@ charset=utf-8">
      <script src="script.js"></script>
      <link rel="stylesheet" href="style.css">
      <base target=_top>
+     <link rel="shortcut icon" href="img/ray.ico" />
 </head>
 
 <body style="margin:0;background-color: #fdefef;" onload="ifnight();start();">
