--- a/index.html
+++ b/index.html
@@ -6,10 +6,11 @@
     <title>Tuanjie WebGL Player | JuniorHigh</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
-    <div id="tuanjie-container" class="tuanjie-desktop">
-      <canvas id="tuanjie-canvas" width=1280 height=720 tabindex="-1"></canvas>
+    <div id="tuanjie-container">
+      <canvas id="tuanjie-canvas" width=960 height=540 tabindex="-1"></canvas>
       <div id="tuanjie-loading-bar">
         <div id="tuanjie-logo"></div>
         <div id="tuanjie-progress-bar-empty">
@@ -17,21 +18,18 @@
         </div>
       </div>
       <div id="tuanjie-warning"> </div>
-      <div id="tuanjie-footer">
-        <div id="tuanjie-webgl-logo"></div>
-        <div id="tuanjie-fullscreen-button"></div>
-        <div id="tuanjie-build-title">JuniorHigh</div>
-      </div>
     </div>
-	
-	
     <script>
+      window.addEventListener("load", function () {
+        if ("serviceWorker" in navigator) {
+          navigator.serviceWorker.register("ServiceWorker.js");
+        }
+      });
 
       var container = document.querySelector("#tuanjie-container");
       var canvas = document.querySelector("#tuanjie-canvas");
       var loadingBar = document.querySelector("#tuanjie-loading-bar");
       var progressBarFull = document.querySelector("#tuanjie-progress-bar-full");
-      var fullscreenButton = document.querySelector("#tuanjie-fullscreen-button");
       var warningBanner = document.querySelector("#tuanjie-warning");
 
       // Shows a temporary message banner/ribbon for a few seconds, or
@@ -61,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WebGl.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGl.data.unityweb",
-        frameworkUrl: buildUrl + "/WebGl.framework.js.unityweb",
-        codeUrl: buildUrl + "/WebGl.wasm.unityweb",
+        dataUrl: buildUrl + "/WebGl.data.gz",
+        frameworkUrl: buildUrl + "/WebGl.framework.js.gz",
+        codeUrl: buildUrl + "/WebGl.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "StanlyCompany",
         productName: "JuniorHigh",
@@ -80,27 +78,13 @@
 
       if (/iPhone|iPad|iPod|Android/i.test(navigator.userAgent)) {
         // Mobile device style: fill the whole browser client area with the game canvas:
-
         var meta = document.createElement('meta');
         meta.name = 'viewport';
         meta.content = 'width=device-width, height=device-height, initial-scale=1.0, user-scalable=no, shrink-to-fit=yes';
         document.getElementsByTagName('head')[0].appendChild(meta);
-        container.className = "tuanjie-mobile";
-        canvas.className = "tuanjie-mobile";
-
-        // To lower canvas resolution on mobile devices to gain some
-        // performance, uncomment the following line:
-        // config.devicePixelRatio = 1;
-
-
-      } else {
-        // Desktop style: Render the game canvas in a window that can be maximized to fullscreen:
-
-        canvas.style.width = "1280px";
-        canvas.style.height = "720px";
       }
 
-      canvas.style.background = "url('" + buildUrl + "/WebGl.jpg.unityweb') center / cover";
+      canvas.style.background = "url('" + buildUrl + "/WebGl.jpg.gz') center / cover";
       loadingBar.style.display = "block";
 
       var script = document.createElement("script");
@@ -108,18 +92,13 @@
       script.onload = () => {
         createTuanjieInstance(canvas, config, (progress) => {
           progressBarFull.style.width = 100 * progress + "%";
-              }).then((tuanjieInstance) => {
-                loadingBar.style.display = "none";
-                fullscreenButton.onclick = () => {
-                  tuanjieInstance.SetFullscreen(1);
-                };
-              }).catch((message) => {
-                alert(message);
-              });
-            };
-
+        }).then((tuanjieInstance) => {
+          loadingBar.style.display = "none";
+        }).catch((message) => {
+          alert(message);
+        });
+      };
       document.body.appendChild(script);
-
     </script>
   </body>
 </html>
