--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
       var buildUrl = "Build";
       var loaderUrl = buildUrl + "/WebGl.loader.js";
       var config = {
-        dataUrl: buildUrl + "/WebGl.data.gz",
-        frameworkUrl: buildUrl + "/WebGl.framework.js.gz",
-        codeUrl: buildUrl + "/WebGl.wasm.gz",
+        dataUrl: buildUrl + "/WebGl.data.unityweb",
+        frameworkUrl: buildUrl + "/WebGl.framework.js.unityweb",
+        codeUrl: buildUrl + "/WebGl.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "StanlyCompany",
         productName: "JuniorHigh",
@@ -84,7 +84,7 @@
         document.getElementsByTagName('head')[0].appendChild(meta);
       }
 
-      canvas.style.background = "url('" + buildUrl + "/WebGl.jpg.gz') center / cover";
+      canvas.style.background = "url('" + buildUrl + "/WebGl.jpg.unityweb') center / cover";
       loadingBar.style.display = "block";
 
       var script = document.createElement("script");
