--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Tuanjie WebGL Player | JuniorHigh</title>
+    <title>Tuanjie WebGL Player | Educate</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -20,7 +20,7 @@
       <div id="tuanjie-footer">
         <div id="tuanjie-webgl-logo"></div>
         <div id="tuanjie-fullscreen-button"></div>
-        <div id="tuanjie-build-title">JuniorHigh</div>
+        <div id="tuanjie-build-title">Educate</div>
       </div>
     </div>
 	
@@ -66,8 +66,8 @@
         codeUrl: buildUrl + "/WebGl.wasm.unityweb",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "StanlyCompany",
-        productName: "JuniorHigh",
-        productVersion: "3.3.5",
+        productName: "Educate",
+        productVersion: "3.3.6",
         showBanner: unityShowBanner,
       };
 
