--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Educate</title>
+    <title>Tuanjie WebGL Player | Educate</title>
     <link rel="shortcut icon" href="TemplateData/favicon.ico">
     <link rel="stylesheet" href="TemplateData/style.css">
   </head>
@@ -67,7 +67,7 @@
         streamingAssetsUrl: "StreamingAssets",
         companyName: "StanlyCompany",
         productName: "Educate",
-        productVersion: "3.3.8.1",
+        productVersion: "3.3.8.2",
         showBanner: unityShowBanner,
       };
 
